Limpiar codigo Añadir Style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="ruta_tres">En urgencias continue recto y en la bifurcación
         ir por el pasillo derecho</string>
     <string name="ruta_cuatro">Continue por ese pasillo hasta el ascensor</string>
+    <string name="ok">OK!!!</string>
 </resources>
